Fix banner z-index

--- a/src/components/Banner.css
+++ b/src/components/Banner.css
@@ -1,6 +1,7 @@
 .banner {
   padding: 0 1rem;
   position: fixed;
+  z-index: 100;
   top: 0;
   width: 100%;
   height: 70px;
